build_result_filter_feature.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources
> Task :app:mergeDebugResources
> Task :app:packageDebugResources
> Task :app:parseDebugLocalResources
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE

> Task :app:processDebugMainManifest
package="com.mycashbook.app" found in source AndroidManifest.xml: C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\AndroidManifest.xml.
Setting the namespace via the package attribute in the source AndroidManifest.xml is no longer supported, and the value is ignored.
Recommendation: remove package="com.mycashbook.app" from the source AndroidManifest.xml: C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\AndroidManifest.xml.

> Task :app:processDebugManifest
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:l8DexDesugarLibDebug UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:516: error: cannot find symbol
        Calendar cal = Calendar.getInstance();
        ^
  symbol:   class Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:516: error: cannot find symbol
        Calendar cal = Calendar.getInstance();
                       ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:530: error: cannot find symbol
                        cal.set(Calendar.HOUR_OF_DAY, 0);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:531: error: cannot find symbol
                        cal.set(Calendar.MINUTE, 0);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:532: error: cannot find symbol
                        cal.set(Calendar.SECOND, 0);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:533: error: cannot find symbol
                        cal.set(Calendar.MILLISECOND, 0);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:539: error: cannot find symbol
                        cal.set(Calendar.HOUR_OF_DAY, 23);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:540: error: cannot find symbol
                        cal.set(Calendar.MINUTE, 59);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:541: error: cannot find symbol
                        cal.set(Calendar.SECOND, 59);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:542: error: cannot find symbol
                        cal.set(Calendar.MILLISECOND, 999);
                                ^
  symbol:   variable Calendar
  location: class TransactionDetailsActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors

[Incubating] Problems report is available at: file:///C:/Users/Pankaj/AndroidStudioProjects/MyCashBook/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:516: error: cannot find symbol
          Calendar cal = Calendar.getInstance();
          ^
    symbol:   class Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:516: error: cannot find symbol
          Calendar cal = Calendar.getInstance();
                         ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:530: error: cannot find symbol
                          cal.set(Calendar.HOUR_OF_DAY, 0);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:531: error: cannot find symbol
                          cal.set(Calendar.MINUTE, 0);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:532: error: cannot find symbol
                          cal.set(Calendar.SECOND, 0);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:533: error: cannot find symbol
                          cal.set(Calendar.MILLISECOND, 0);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:539: error: cannot find symbol
                          cal.set(Calendar.HOUR_OF_DAY, 23);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:540: error: cannot find symbol
                          cal.set(Calendar.MINUTE, 59);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:541: error: cannot find symbol
                          cal.set(Calendar.SECOND, 59);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  C:\Users\Pankaj\AndroidStudioProjects\MyCashBook\app\src\main\java\com\mycashbook\app\ui\transaction\TransactionDetailsActivity.java:542: error: cannot find symbol
                          cal.set(Calendar.MILLISECOND, 999);
                                  ^
    symbol:   variable Calendar
    location: class TransactionDetailsActivity
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  10 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
29 actionable tasks: 11 executed, 18 up-to-date
